config/deploy/openshift/registry.yaml
# ---------------------------------------------------------------------------
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ---------------------------------------------------------------------------

---
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  ports:
    - protocol: TCP
      name: registry
      port: 80
      targetPort: 5000
  selector:
    app: registry
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: registry
spec:
  host: >-
    registry.$(EXTERNAL_HOSTNAME)
  to:
    kind: Service
    name: registry
  port:
    targetPort: registry
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: registry
          image: registry:2.8.1
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: registry
              mountPath: /var/lib/registry
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
